--- a/source/assets/stylesheets/scss/layout/_header.scss
+++ b/source/assets/stylesheets/scss/layout/_header.scss
@@ -72,7 +72,6 @@
       padding: 20px;
       justify-content: space-between;
       background-color: color(navy, tone-0);
-      z-index: 1;
     }
   }
 
@@ -90,6 +89,5 @@
     }
   }
 }
-
 
 
